--- a/02_reshaping_data.Rmd
+++ b/02_reshaping_data.Rmd
@@ -279,11 +279,11 @@ levels(my_fact_vec)
 
 ![](wip.png)
 
-Why does it matter? Well, most operations on categorical variables can be performed on `character` of `factor` objects, so it does not matter so much which one you use for your own data. However, some functions in R require you to provide categorical variables in one specific format, and others may even implicitely convert your variables. In `ggplot2` for example, character vectors are converted into factors by default. So, it is always good to remember the differences and what type your variables are.
+~~Why does it matter? Well, most operations on categorical variables can be performed on `character` of `factor` objects, so it does not matter so much which one you use for your own data. However, some functions in R require you to provide categorical variables in one specific format, and others may even implicitely convert your variables. In `ggplot2` for example, character vectors are converted into factors by default. So, it is always good to remember the differences and what type your variables are.
 
 But this is a tidyverse tutorial, so I would like to introduce here the package `forcats`, which offers tools to manipulate factors. First of all, most tools from `stringr` *will work* on factors. The `forcats` functions expand the string manipulation toolbox with factor-specific utilities. Similar in philosophy to `stringr` where functions started with `str_`, in `forcats` most functions start with `fct_`.
 
-I see two main ways `forcats` can come handy in the kind of data most people deal with: playing with the order of the levels of a factor and playing with the levels themselves. We will show here a few examples, but the full breadth of factor manipulations can be found online or in the excellent `forcats` cheatsheet.
+I see two main ways `forcats` can come handy in the kind of data most people deal with: playing with the order of the levels of a factor and playing with the levels themselves. We will show here a few examples, but the full breadth of factor manipulations can be found online or in the excellent `forcats` cheatsheet.~~
 
 ### Change the order of the levels
 
@@ -319,7 +319,7 @@ data$island <- factor(data$island, levels = c("Santa Cruz", "Isabela"))
 my_plot(data) # order of islands has changed!
 ```
 
-Beware that reordering a factor *does not change* the order of the items within the vector, only the order of the *levels*. So, it does not introduce any mistmatch between the `island` column and the other columns! It only matters when the levels are called, for example, in a `ggplot`. As you can see:
+Beware that reordering a factor *does not change* the order of the items within the vector, only the order of the *levels*. So, it does not introduce any mistmatch between the `island` column and the other columns! It only matters when the levels are called, for example, in a `ggplot`.
 
 ```{r}
 data$island[1:10]
@@ -345,15 +345,15 @@ levels(factor(data$island,
 
 ![](wip.png)
 
-Other variants exist to do more complex reordering, all present in the forcats  [cheatsheet](https://rstudio.com/resources/cheatsheets/), for example:
+~~Other variants exist to do more complex reordering, all present in the forcats  [cheatsheet](https://rstudio.com/resources/cheatsheets/), for example:
 * `fct_infreq` to re-order according to the frequency of each level (how many observation on each island?)
 * `fct_shift` to shift the order of all levels by a certain rank (in a circular way so that the last one becomes the first one or vice versa)
 * `fct_shuffle` if you want your levels in random order
-* `fct_reorder`, which reorders based on an associated variable (see `fct_reorder2` for even more complex relationship between the factor and the associated variable)
+* `fct_reorder`, which reorders based on an associated variable (see `fct_reorder2` for even more complex relationship between the factor and the associated variable)~~
 
-### Change the levels themselves
+### Modifying factor levels
 
-Changing the levels of a factor will change the labels in the actual vector. It is similar to performing a string substitution in `stringr`. One can change the levels of a factor using `fct_recode`:
+~~Changing the levels of a factor will change the labels in the actual vector. It is similar to performing a string substitution in `stringr`. One can change the levels of a factor using `fct_recode`:
 
 ```{r}
 fct_recode(
@@ -372,7 +372,7 @@ fct_collapse(my_fact_vec, EU = c("Theo", "Raph"), NonEU = "Pratik")
 
 Again, we do not provide an exhaustive list of `forcats` functions here but the most usual ones, to give a glimpse of many things that one can do with factors. So, if you are dealing with factors, remember that `forcats` may have handy tools for you. Among others:
 * `fct_anon` to "anonymize", i.e. replace the levels by random integers
-* `fct_lump` to collapse levels together based on their frequency (e.g. the two most frequent levels together)
+* `fct_lump` to collapse levels together based on their frequency (e.g. the two most frequent levels together)~~
 
 ### Dropping levels
 
@@ -399,21 +399,11 @@ Note that this is equivalent to doing:
 data$island <- fct_drop(data$island)
 ```
 
-### Other things
-
-Among other things you can use in `forcats`:
-* `fct_count` to get the frequency of each level
-* `fct_c` to combine factors together
-
-### Take home message for forcats
-
-Use this package to manipulate your factors. Do you need factors? Or are character vectors enough? That is your call, and may depend on the kind of analyses you want to do and what they require. We saw here that for plotting, having factors can allow you to do quite some tweaking of the display. If you encounter a situation where the order of encoding of your character vector starts to matter, then maybe converting into a factor would make your life easier. And if you do so, remember that lots of tools to perform all kinds of manipulation are available to you with both `stringr`and `forcats`.
-
 ## External resources
 
-Find lots of additional info by looking up the following links:
+~~Find lots of additional info by looking up the following links:
 
 * The `readr`/`tibble`/`tidyr` and `forcats` [cheatsheets](https://rstudio.com/resources/cheatsheets/).
 * This [link](https://tidyr.tidyverse.org/articles/tidy-data.html) on the concept of tidy data
 * The [tibble](https://tibble.tidyverse.org/), [tidyr](https://tidyr.tidyverse.org/) and [forcats](https://forcats.tidyverse.org/) websites
-* The [broom](https://broom.tidymodels.org/), [tidymodels](https://www.tidymodels.org/), [tidygraph](https://www.data-imaginist.com/2017/introducing-tidygraph/) and [tidytree](https://yulab-smu.github.io/treedata-book/) websites
+* The [broom](https://broom.tidymodels.org/), [tidymodels](https://www.tidymodels.org/), [tidygraph](https://www.data-imaginist.com/2017/introducing-tidygraph/) and [tidytree](https://yulab-smu.github.io/treedata-book/) websites~~
